src/objects/Households_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Setting object for the Nonprofit Starter Pack Households Package</description>
    <fields>
        <fullName>Advanced_Household_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Activate advanced household naming functionality in version 2.1+.  This will provide dynamic naming for Household Names, Informal and Formal Greetings.</inlineHelpText>
        <label>Advanced Household Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Always_Rollup_to_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Always rollup to the primary contact, and corresponding household, on an opp. even if the opportunity is not from an individual (i.e. from a company, foundation, etc.)</inlineHelpText>
        <label>Always Rollup to Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Async_Household_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a non-exposed setting to toggle household naming code to use an asynchronous version instead of the standard version.</inlineHelpText>
        <label>Async Household Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_HouseholdAfter_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the HouseholdAfter.trigger (Household__c, after update)</description>
        <inlineHelpText>!!WARNING!!
DISABLES the HouseholdAfter.trigger (Household__c, after update)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_HouseholdAfter_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_HouseholdBefore_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the HouseholdBefore.trigger (Household__c, before update)</description>
        <inlineHelpText>!!WARNING!!
DISABLES the HouseholdBefore.trigger (Household__c, before update)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_HouseholdBefore_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_Household_Opportunity_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the Household_Opportunity.trigger (Opportunity, after insert).</description>
        <inlineHelpText>!!WARNING!!
DISABLES the Household_Opportunity.trigger (Opportunity, after insert)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_Household_Opportunity_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_Households_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the Households.trigger (Contact, after insert, after update, after delete)</description>
        <inlineHelpText>!!WARNING!!
DISABLES the Households.trigger (Contact, after insert, after update, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_Households_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityRollup_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the OpportunityRollup.trigger (Opportunity, after insert, after update, after delete)</description>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityRollup.trigger (Opportunity, after insert, after update, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_OpportunityRollup_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opp_Rollup_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this box to update opportunity totals whenever opportunities are inserted or updated (as long as capacity allows).</inlineHelpText>
        <label>Roll Up Opps in Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the package automatically checks for new updates and versions.</description>
        <inlineHelpText>Controls if the package automatically checks for new updates and versions.</inlineHelpText>
        <label>Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Account_Opp_Rectypes__c</fullName>
        <inlineHelpText>Names of opportunity record types to exclude when rolling up account opportunities. Separate record type names with semicolons.</inlineHelpText>
        <label>Opp Rectypes Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Account_Opp_Types__c</fullName>
        <inlineHelpText>Values for the opportunity Type field to exclude when rolling up account opportunities. Separate types with semicolons.</inlineHelpText>
        <label>Opp Types Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Contact_Opp_Rectypes__c</fullName>
        <inlineHelpText>Names of opportunity record types to exclude when rolling up contact opportunities. Separate record type names with semicolons.</inlineHelpText>
        <label>Opp Rectypes Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Contact_Opp_Types__c</fullName>
        <inlineHelpText>Values for the opportunity Type field to exclude when rolling up contact opportunities. Separate types with semicolons.</inlineHelpText>
        <label>Opp Types Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Package_Update__c</fullName>
        <label>Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Contact_Roles_On__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field to create automatic Contact Roles for Household members of the Primary Contact</inlineHelpText>
        <label>Household Contact Roles On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Mailing_List_ID__c</fullName>
        <description>The report ID of the Household Mailing List Report used for Household-deduplicated Campaign mailing lists.  Report should be of Campaigns with Contacts, where Member Status does not contain &apos;Duplicate&apos;</description>
        <inlineHelpText>The report ID of the Household Mailing List Report used for Household-deduplicated Campaign mailing lists.  Report should be of Campaigns with Contacts, where Member Status does not contain &apos;Duplicate&apos;</inlineHelpText>
        <label>Household Mailing List ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Member_Contact_Role__c</fullName>
        <inlineHelpText>Select the Contact Role for Household Members</inlineHelpText>
        <label>Household Member Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Rules__c</fullName>
        <inlineHelpText>Select which Contacts get Households: All, only those related to an Individual Account, or none.</inlineHelpText>
        <label>Household Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Check__c</fullName>
        <label>Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Package_Version__c</fullName>
        <label>Max Package Version</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Grace_Period__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>The length of the grace period (in days) after a membership expires (last end date) before the status moves from &apos;Grace Period&apos; to &apos;Expired&apos;.  Defaults to 30 days.</inlineHelpText>
        <label>Membership Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Record_Types__c</fullName>
        <inlineHelpText>Name of record types, such as Membership, that you want to roll up separately from other types. Separate record type names with semicolons.</inlineHelpText>
        <label>Membership Record Type Names</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rollup_Scheduled_Job_Id__c</fullName>
        <inlineHelpText>Id for the currently scheduled Opportunity Rollup Job</inlineHelpText>
        <label>Opp Rollup Scheduled Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Update_URL__c</fullName>
        <label>Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rollup_N_Day_Value__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>Provide a value for &apos;N day&apos; rollups, where &apos;N&apos; is the number of days from today into the past.  This value defaults to rollup over the past 365 days.</inlineHelpText>
        <label>Rollup N Day Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Check_Interval__c</fullName>
        <description>The number of days between NPSP callouts to check for new versions of this package. The default value is 90 days.</description>
        <inlineHelpText>The number of days between NPSP callouts to check for new versions of this package. The default value is 90 days.</inlineHelpText>
        <label>Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Fiscal_Year_for_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will cause opportunity rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year.  NOTE: Custom Fiscal Year Settings are NOT supported.</inlineHelpText>
        <label>Use Fiscal Year for Rollups</label>
        <type>Checkbox</type>
    </fields>
    <label>Households Settings</label>
</CustomObject>